--- a/pages/templates/create.html
+++ b/pages/templates/create.html
@@ -5,7 +5,7 @@
 {% block title %}Create Poll{% endblock %}
 
 {% block main %}
-<div class="row">
+<div class="row" style="background-color: #3EB489;">
     <div class="col-lg-8 col-lg-offset-2">
         <div class="panel panel-default">
             <div class="panel-heading">
@@ -16,7 +16,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-lg-12">
-                            <div class="form-group">
+                            <div class="form-group" style="background-color: #ff6600;">
                                 <label for="question">Easiest programming language to learn?</label>
                                 {% render_field form.question class="form-control" rows="3" %}
                             </div>
