Removed unnecessary comments, and fixed formatting for create page!

--- a/pages/templates/create.html
+++ b/pages/templates/create.html
@@ -37,7 +37,7 @@
                             <div class="form-group">
                                 <label>
                                     {{ form.option_two }}
-                                    C++
+                                    <br>C++
                                     <input type="radio" name="answer" value="option_two">
                                 </label>
                             </div>
@@ -46,7 +46,7 @@
                             <div class="form-group">
                                 <label>
                                     {{ form.option_three }}
-                                    Java
+                                    <br>Java
                                     <input type="radio" name="answer" value="option_three">
                                 </label>
                             </div>
