--- a/pages/templates/create.html
+++ b/pages/templates/create.html
@@ -5,10 +5,11 @@
 {% block title %}Create Poll{% endblock %}
 
 {% block main %}
+
 <div class="row" style="background-color: #3EB489;">
     <div class="col-lg-8 col-lg-offset-2">
         <div class="panel panel-default">
-            <div class="panel-heading">
+            <div class="panel-heading" style="background-color: #2E8B57;">
                 <h3 class="panel-title">Create A New Poll</h3>
             </div>
             <form method="POST">
@@ -22,48 +23,46 @@
                             </div>
                         </div>
                     </div>
-
-                    <div class="row">
-                        <div class="col-lg-4">
-                            <div class="form-group">
-                                <label>
-                                    {{ form.option_one }}
-                                    Python
-                                    <input type="radio" name="answer" value="option_one">
-                                </label>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="form-group">
-                                <label>
-                                    {{ form.option_two }}
-                                    <br>C++
-                                    <input type="radio" name="answer" value="option_two">
-                                </label>
-                            </div>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="form-group">
-                                <label>
-                                    {{ form.option_three }}
-                                    <br>Java
-                                    <input type="radio" name="answer" value="option_three">
-                                </label>
-                            </div>
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="form-group">
+                            <label>
+                                {{ form.option_one }}
+                                Python
+                                <input type="radio" name="answer" value="option_one">
+                            </label>
                         </div>
                     </div>
-
-                    <div class="row">
-                        <hr />
-                        <div class="col-lg-4">
-                            <button type="submit" class="btn btn-info">Submit</button>
+                    <div class="col-lg-4">
+                        <div class="form-group">
+                            <label>
+                                {{ form.option_two }}
+                                <br>C++
+                                <input type="radio" name="answer" value="option_two">
+                            </label>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="form-group">
+                            <label>
+                                {{ form.option_three }}
+                                <br>Java
+                                <input type="radio" name="answer" value="option_three">
+                            </label>
                         </div>
                     </div>
                 </div>
-            </form>
 
-        </div>
+                <div class="row">
+                    <hr style="border-color: #2E8B57;" />
+                    <div class="col-lg-4">
+                        <button type="submit" class="btn btn-info" style="background-color: #2E8B57; border-color: #2E8B57;">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+
     </div>
 </div>
-
+</div>
 {% endblock %}
