--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -39,6 +39,7 @@
   <p>The outer mysite/ root directory is a container for your project. Its name doesn’t matter to Django; you can rename it to anything you like.</p>
   <p>manage.py: A command-line utility that lets you interact with this Django project in various ways. You can read all the details about manage.py in django-admin and manage.py.</p>
   <p>mysite/__init__.py: An empty file that tells Python that this directory should be considered a Python package. If you’re a Python beginner, read more about packages in the official Python docs.</p>
+  <p>By Abdullah Mutaz Alshawa.</p>
 </div>
 
 {% endblock %}
