Format for answers

--- a/pages/templates/create.html
+++ b/pages/templates/create.html
@@ -28,7 +28,7 @@
                         <div class="form-group">
                             <label>
                                 {{ form.option_one }}
-                                Python
+                                <br>Python
                                 <input type="radio" name="answer" value="option_one">
                             </label>
                         </div>
