--- a/pages/templates/create.html
+++ b/pages/templates/create.html
@@ -19,50 +19,49 @@
                         <div class="col-lg-12">
                             <div class="form-group" style="background-color: #ff6600;">
                                 <label for="question">Easiest programming language to learn?</label>
-                                {% render_field form.question class="form-control" rows="3" %}
+                                {% render_field form.question id="question" class="form-control" rows="3" %}
+                                <label for="question">Describe each language</label>
                             </div>
                         </div>
                     </div>
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label>
-                                {{ form.option_one }}
-                                <br>Python
-                                <input type="radio" name="answer" value="option_one">
-                            </label>
+                    <div class="row">
+                        <div class="col-lg-4">
+                            <div class="form-group">
+                                <label>
+                                    {{ form.option_one }}
+                                    <br>Python
+                                    <input type="radio" name="answer" value="option_one">
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="form-group">
+                                <label>
+                                    {{ form.option_two }}
+                                    <br>C++
+                                    <input type="radio" name="answer" value="option_two">
+                                </label>
+                            </div>
+                        </div>
+                        <div class="col-lg-4">
+                            <div class="form-group">
+                                <label>
+                                    {{ form.option_three }}
+                                    <br>Java
+                                    <input type="radio" name="answer" value="option_three">
+                                </label>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label>
-                                {{ form.option_two }}
-                                <br>C++
-                                <input type="radio" name="answer" value="option_two">
-                            </label>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="form-group">
-                            <label>
-                                {{ form.option_three }}
-                                <br>Java
-                                <input type="radio" name="answer" value="option_three">
-                            </label>
+                    <div class="row">
+                        <hr style="border-color: #2E8B57;" />
+                        <div class="col-lg-4">
+                            <button type="submit" class="btn btn-info" style="background-color: #2E8B57; border-color: #2E8B57;">Submit</button>
                         </div>
                     </div>
                 </div>
-
-                <div class="row">
-                    <hr style="border-color: #2E8B57;" />
-                    <div class="col-lg-4">
-                        <button type="submit" class="btn btn-info" style="background-color: #2E8B57; border-color: #2E8B57;">Submit</button>
-                    </div>
-                </div>
-            </div>
-        </form>
-
+            </form>
+        </div>
     </div>
-</div>
 </div>
 {% endblock %}
