--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -33,10 +33,8 @@
   <h1>Welcome</h1>
   <p>This is an example of HTML with Django.</p>
   <p>Django is a web framework that makes it easy to build web applications quickly and with peace of mind. With its built-in security features, you can deploy your projects with confidence. And, Django is highly scalable, so you can take your applications to the next level.</p>
-  <p>For example, when you create a project named mysite, the following files are created:</p>
-  <p>These files are:</p>
-
-  <p>The outer mysite/ root directory is a container for your project. Its name doesn’t matter to Django; you can rename it to anything you like.</p>
+  <p>For example, when you create a project named mysite, the following are created:</p>
+  <p>The outer mysite/ root directory is a container for your project. Its' name doesn’t matter to Django; you can rename it to anything you like.</p>
   <p>manage.py: A command-line utility that lets you interact with this Django project in various ways. You can read all the details about manage.py in django-admin and manage.py.</p>
   <p>mysite/__init__.py: An empty file that tells Python that this directory should be considered a Python package. If you’re a Python beginner, read more about packages in the official Python docs.</p>
   <p>By Abdullah Mutaz Alshawa.</p>
