--- a/pages/templates/create.html
+++ b/pages/templates/create.html
@@ -18,9 +18,9 @@
                     <div class="row">
                         <div class="col-lg-12">
                             <div class="form-group" style="background-color: #ff6600;">
-                                <label for="question">Easiest programming language to learn?</label>
+                                <label for="question">Easiest programming language to learn out of Python, C++, and Java?</label>
                                 {% render_field form.question id="question" class="form-control" rows="3" %}
-                                <label for="question">Describe each language</label>
+                                <label for="question">Describe each!</label>
                             </div>
                         </div>
                     </div>
